--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,8 @@ repositories {
 dependencies {
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.8.4'
-    compile group: 'postgresql', name: 'postgresql', version: '9.1-901-1.jdbc4'
+    compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '1.5.4'
+    compile group: 'com.zaxxer', name: 'HikariCP', version: '2.5.1'
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'com.google.truth', name: 'truth', version: '0.30'
