--- a/build.gradle
+++ b/build.gradle
@@ -19,4 +19,5 @@ dependencies {
 
     testCompile group: 'junit', name: 'junit', version: '4.11'
     testCompile group: 'com.google.truth', name: 'truth', version: '0.30'
+    testCompile "org.mockito:mockito-core:1.+"
 }
