--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,8 @@ repositories {
 }
 
 dependencies {
+
+    compile group: 'org.eclipse.persistence', name: 'eclipselink', version: '2.6.4'
     compile group: 'javax.servlet', name: 'javax.servlet-api', version: '3.1.0'
     compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-xml', version: '2.8.4'
     compile group: 'org.mariadb.jdbc', name: 'mariadb-java-client', version: '1.5.4'
